Overlapping Fix

--- a/css/base.scss
+++ b/css/base.scss
@@ -2,6 +2,8 @@
     margin:0; 
     padding:0; 
     text-decoration:none;
+    font-family: Tahoma, Geneva, sans-serif;
+	font-size:25px;
 
 }
 #nav li ul.first {
