--- a/css/module.scss
+++ b/css/module.scss
@@ -3,11 +3,11 @@
     background:#000; 
 }
 li:hover > .nav { 
-    display:block; 
+    display:inline-block; 
     position:absolute; 
-    width:200px; 
+    width:100px; 
     top:-2px; 
-    left:50%; 
+    left: 100%; 
     z-index:1000; 
     border:1px #000 solid; 
 }
